# fw-matterbridge

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  Matter-Test.ioc  README.md  STM32WB5MMGHX_FLASH.ld
Application/codegen/zap-generated/: access.h  thermostat.zap
Application/inc/: AppTask.h  CHIPProjectConfig.h  LED.h  matter_config.h
Application/src/: AppTask.cpp  IdentifierEffect.cpp  LED.c  ZclCallbacks.cpp
Core/Codegen/zap-generated/: gen_config.h  thermostat.matter
Core/Codegen/zap-generated/app/: callback-stub.cpp  cluster-init-callback.cpp
Core/Inc/: AppTask.h  CHIPProjectConfig.h  FreeRTOSConfig.h  LED.h  app_ble.h  app_conf.h  app_debug.h  ble_conf.h  custom_stm.h  flash_wb.h  hw_conf.h  hw_if.h  main.h  s25fl128s_conf.h  stm32_factorydata.h  stm32_lpm_if.h  stm32wb5mm_dk_qspi.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h  stm_logging.h  tl_dbg_conf.h  utilities_conf.h
Core/Src/: AppTask.cpp  IdentifierEffect.cpp  LED.c  ZclCallbacks.cpp  app_ble.c  app_debug.c  app_entry.cpp  app_freertos.c  app_matter.c  app_thread.c  flash_wb.c  freertos_port.c  hw_ipcc.c  hw_timerserver.c  main.c  stm32_factorydata.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c  stm_ext_flash.c  stm_logging.c  syscalls.c  sysmem.c  system_stm32wbxx.c
Core/inc/: FreeRTOSConfig.h  app_ble.h  app_common.h  app_conf.h  app_entry.h  app_matter.h  app_thread.h  ble_conf.h  ble_dbg_conf.h  custom_stm.h  flash_wb.h  hw_conf.h  hw_if.h  main.h  s25fl128s_conf.h  stm32wb5mm_dk_conf.h  stm32wb5mm_dk_errno.h  stm32wb5mm_dk_qspi.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h  stm_ext_flash.h  stm_logging.h  tl_dbg_conf.h  utilities_conf.h
Core/src/: app_ble.c  app_debug.c  app_entry.cpp  app_freertos.c  app_matter.c  app_thread.c  custom_stm.c  entropy_hardware_poll.c  flash_wb.c  freertos_port.c  hw_ipcc.c  hw_timerserver.c  main.c  stm32_lpm_if.c  stm32wb5mm_dk_qspi.c  stm32wbxx_hal_msp.c  stm32wbxx_hal_timebase_tim.c  stm32wbxx_it.c  stm_ext_flash.c  stm_logging.c  syscalls.c  system_stm32wbxx.c
ESP32/: sdkconfig  sdkconfig.old
ESP32/main/: app_main.cpp  app_priv.h  temp_sensor.cpp  temp_sensor.h
STM32/: .clang-format  CMakeLists.txt  st_nucleo_wb55.cfg
STM32/Application/codegen/zap-generated/: endpoint_config.h
STM32/Application/codegen/zap-generated/app/: PluginApplicationCallbacks.h
STM32/Application/inc/: AppEvent.h  AppTask.h  LED.h  LED_Animation.h  ThermostatManager.h
STM32/Application/src/: AppTask.cpp  LED_Animation.cpp  ThermostatManager.cpp  ZclCallbacks.cpp
STM32/Core/inc/: FreeRTOSConfig.h  app_ble.h  app_debug.h  app_entry.h  app_matter.h  app_thread.h  ble_dbg_conf.h  custom_stm.h  hw_conf.h  hw_if.h  stm32_lpm_if.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h  tl_dbg_conf.h  utilities_conf.h
STM32/Core/src/: app_debug.c  app_entry.cpp  app_matter.c  custom_stm.c  flash_wb.c  freertos_port.c  hw_timerserver.c  main.c  stm32wbxx_hal_msp.c  stm32wbxx_hal_timebase_tim.c  stm32wbxx_it.c  stm_logging.c  system_stm32wbxx.c
cmake/: gcc-arm-none-eabi.cmake
